corrected cropper view on lager displays

--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap");
+$base-color: cornflowerblue;
+@import "~vue-advanced-cropper/dist/theme.classic.scss";
 @layer base {
 }
